<resources>

    <!-- app -->
    <string name="app_name">Android-Sample</string>

    <!-- http connector -->
    <string name="http_connector_label">Http Connector</string>
    <string name="http_connector_connection_failed">Connection failed</string>

    <!-- image item view -->
    <string name="image_item_view">Image Item View</string>

    <!-- drag sort list activity -->
    <string name="drag_sort_list">Drag Sort List View</string>
    <string name="drag_sort_list_button_draggable">Draggable</string>
    <string name="drag_sort_list_button_not_draggable">Not Draggable</string>
    <string-array name="random_names">
        <item>0</item>
        <item>00</item>
        <item>000</item>
        <item>0000</item>
        <item>00000</item>
        <item>000000</item>
        <item>0000000</item>
        <item>00000000</item>
        <item>000000000</item>
        <item>0000000000</item>
    </string-array>

    <!-- horizontal scroll and tab -->
    <string name="horizontal_scroll_and_tab">Horizontal Scroll And Tab</string>

    <!-- calendar -->
    <string name="calendar">Calendar</string>

    <!-- custom adapter -->
    <string name="custom_adapter">Custom Adapter</string>

    <!-- realm -->
    <string name="realm">Realm</string>
    <string name="realm_insert">Insert</string>
    <string name="realm_insert_name">Name</string>
    <string name="realm_insert_code">Code</string>
    <string name="realm_insert_toast_empty">Name or Code is empty</string>

    <!-- sensor listener -->
    <string name="sensor_listener">Sensor Listener</string>

    <!-- gl surface -->
    <string name="gl_surface">GL Surface</string>
</resources>
